sorted/tests/03-out-of-order.stderr
error: SomethingFailed should sort before ThisFailed
  --> $DIR/03-out-of-order.rs:20:5
   |
20 |     SomethingFailed,
   |     ^^^^^^^^^^^^^^^
